--- a/css/styles.css
+++ b/css/styles.css
@@ -142,8 +142,11 @@ a.head-info:focus {
 
 .hero {
     padding: 200px 0px;
-    background: #2F303A;
-
+    background-color:rgba(47, 48, 58, 0.4);
+    background-image: url(../img/img_background/background-img.jpg);
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
+    background-size: 1600px;
 }
 
 .hero-text {
