--- a/css/styles.css
+++ b/css/styles.css
@@ -142,11 +142,23 @@ a.head-info:focus {
 
 .hero {
     padding: 200px 0px;
-    background-color:rgba(47, 48, 58, 0.4);
+    /* background-color:rgba(47, 48, 58, 0.4);
     background-image: url(../img/img_background/background-img.jpg);
     background-repeat: no-repeat;
-    background-position: 50% 50%;
+    background-position: 50% 50%; */
     background-size: 1600px;
+}
+/* при добавлении тени в бгм как в видео у репеты не подгружается картинка вообще, почему? */
+.overlay {
+    max-width: 1600px;
+    height: 600px;
+    margin-left: auto;
+    margin-right: auto;
+    background-image:/*rgba(47, 48, 58, 0.4)*/ url("../img/img_background/background-img.jpg");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    background-color: black;
 }
 
 .hero-text {
