--- a/css/styles.css
+++ b/css/styles.css
@@ -153,7 +153,10 @@ a.head-info:focus {
     height: 600px;
     margin-left: auto;
     margin-right: auto;
-    background-image:/*rgba(47, 48, 58, 0.4)*/ url("../img/img_background/background-img.jpg");
+    background-image: linear-gradient(to right, 
+    rgba(47, 48, 58, 0.4),
+    rgba(47, 48, 58, 0.4)),
+    url("../img/img_background/background-img.jpg");
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
